--- a/Belly dance .html
+++ b/Belly dance .html
@@ -6,10 +6,15 @@
 			<div class="title1"><h3><b>Главный телефон для справок:489-480</b></h3></div>
 			<div class="ad"><h3><b>Масленикова 28,Модный дом "Роба"(5 этаж)</h3></b></div>
 		</div>
-				<div class="Belly">
-					
-<p>Наши ученики постоянно участвуют в городских мероприятиях и соревнованиях, побеждают и занимают призовые места, доказывают делом, что занимаются у сильнейшего педагога в г. Омске.В нашей студии созданы отдельные группы брейк данса для самых маленьких — от 5 до 7 лет, для детей в возрасте от 7 до 12 лет, для взрослых. Группы так же разделены по уровню подготовки и длительности обучения данному направлению. В этих классах процесс обучения проходит с учетом особенностей детской психики и скорости усвоения материала. Акцент делается на безопасности занятий, развитии в ребенке чувства ритма, координации движений и раскрепощении.</p>
-Этот танец доступен всем женщинам желающим познать свою истинную природу, вернуться к истокам, независимо от возраста, комплекции физической подготовки.
+				<div class="bely_d">
+					<img src="bely.jpg">
+				<div>	
+
+<p>Одно из видимых отличий от других танцев – большое количество движений бедер и живота. Отсюда распространенный миф, что танец живота – это танец только живота. На самом деле во время танца задействованы практически все группы мышц. Вырабатывается «змеиная» гибкость тела, улучшается координация движений. Вы научитесь чувствовать ритм и удивитесь способностям своего тела так выразительно двигаться.
+<p>
+
+<p>Этот танец доступен всем женщинам желающим познать свою истинную природу, вернуться к истокам, независимо от возраста, комплекции физической подготовки.
+	<p>
 			</div>
 						
 
