--- a/j-loft.html
+++ b/j-loft.html
@@ -1,44 +1,57 @@
 <html>
 	<link rel="stylesheet" href="progect.css">
 		<body>
-			<div class="block5">
-			<img class="" 	src=".jpg">
+		<div class="block5">
+			<img class="j" 	src="logotip.png">
+			<div class="title1"><h3><b>Главный телефон для справок:489-480</b></h3></div>
+			<div class="ad"><h3><b>Масленикова 28,Модный дом "Роба"(5 этаж)</h3></b></div>
+		</div>
+		<div class="train">
+			<img class="oi" src="best.jpg">
 			
-			</div>
-			<div class="tr">Тебя ждут лучшие тренера</div>
-			<img class="oi" src="pid.jpg">
+		</div>
+				<div class="lina"><div>
+		<div class="fest">	
+			<img class="f" src="fest.jpg"/>
+		</div>
+		
+			<img class="s" src="sorev.jpg"/>
+		
+	
+		<div class='naprav'>		
 			
-				<div class="line"><div>
+			<div class="naprav_block">Stretching</div>
 			
-			<img class="k" src="k.jpg">
-		
-		
-		<div class="lina"><div>
-		
-		<div class="block6"></div>
-		
-		<div class="block7">Stretching</div>
-		
-		<div class="block8">Hip-Hop</div>
-		
-		<div class="block9">Belly dance</div>
-		
-		<div class="block10">Strip dance</div>
-		
-		<div class="block11">Dancehall</div>
-		
-		<div class="block12">Breakdance</div>
-		
-		<div class="block13">Lady's Dance</div>
-		
-		<div class="block14">Детская хореография</div>
-		
-		<div class="block15">Contemporary</div>
-		
-		<div class="footer"></div>
-		
-		
-		
+			<div class="naprav_block">Hip-Hop</div>
+			
+			<div class="naprav_block">Belly dance</div>
+			
+			<div class="naprav_block">Strip dance</div>
+			
+			<div class="naprav_block">Dancehall</div>
+			
+			<div class="naprav_block">Breakdance</div>
+			
+			<div class="naprav_block">Lady's Dance</div>
+			
+			<div class="naprav_block">Детская хореография</div>
+			
+			<div class="naprav_block">Contemporary</div>
+			
+			<div class="inf_o_st">Студия танса"j-loft"создана для того,чтобы собирать любителей танса от новичков до професионалов.
+			Наша цель-учить людей танцевоть.
+			<p>У нас есть всё:комфортные условия и профессиональная команда педагогов,группы для начинающих и профи ,большой выбор танцевальных направлений. </p>
+		<p>Студия танса "j-loft" работает 7 дней в неделю.Основные танцевальные направления,прекрасные педагоги,просторный зал,центр города.</p></div>				
+			<div class="footer">
+			
+			<img class="fo" src="vk.jpg"/>
+					<h1><a href=https://vk.com/j_loft>Наша страница со всени новостями</a></h1>
+
+			
+			
+			
+			</div>	
+			
 		</body>
 
 
