--- a/Lady's Dance.html
+++ b/Lady's Dance.html
@@ -1,6 +1,6 @@
 <html>
 		<title>break dance</title>
-				<link rel="stylesheet" href="Ld.css">
+				<link rel="stylesheet" href="ld.css">
 			<div class="block5">
 			<img class="j" 	src="logotip.png">
 			<div class="title1"><h3><b>Главный телефон для справок:489-480</b></h3></div>
