--- a/dh.html
+++ b/dh.html
@@ -1,12 +1,12 @@
 <html>
 		<title>Детская хореография</title>
-				<link rel="stylesheet" href="gh.css">
+				<link rel="stylesheet" href="bd.css">
 			<div class="block5">
 			<img class="j" 	src="logotip.png">
 			<div class="title1"><h3><b>Главный телефон для справок:489-480</b></h3></div>
 			<div class="ad"><h3><b>Масленикова 28,Модный дом "Роба"(5 этаж)</h3></b></div>
 		</div>
-				<div class="dh">
+				<div class="brake">
 					<img src="dh.jpg">	
 					
 					
