--- a/j-loft.html
+++ b/j-loft.html
@@ -2,17 +2,24 @@
 	<link rel="stylesheet" href="progect.css">
 		<body>
 		<div class="block5">
-			<img class="j" 	src="logotip.png">
+			
 			<div class="title1"><h3><b>Главный телефон для справок:489-480</b></h3></div>
 			<div class="ad"><h3><b>Масленикова 28,Модный дом "Роба"(5 этаж)</h3></b></div>
 		</div>
-		<div class="train">
-			<img class="oi" src="best.jpg">
-			
-		</div>
-				<div class="lina"><div>
+		<div class="slides">
+        <img src="best.jpg" class="block" alt="">
+        <img src="Group 56.jpg" alt="">
+        <img src="Group 58.jpg" alt="">
+        <img src="Group 59.jpg" alt="">
+		
+    </div>
+	<div>
+    <button class="btnRight">листать далее</button>
+    <script src="script.js" class="btnRight"></script>
+	</div>
+				<div class="lina"></div>
 		<div class="fest">	
-			<img class="f" src="fest.jpg"/>
+			<img class ="f" src="k.jpg"/>
 		</div>
 		
 			<img class="s" src="sorev.jpg"/>
@@ -22,7 +29,7 @@
 			
 			<div class="naprav_block">Stretching</div>
 			
-			<div class="naprav_block">Hip-Hop</div>
+			<div class="naprav_block"><a href="file:///C:/Users/Федосей/Downloads/-_-/Hip-Hop.html">Hip-Hop</a></div>
 			
 			<div class="naprav_block">Belly dance</div>
 			
@@ -30,18 +37,19 @@
 			
 			<div class="naprav_block">Dancehall</div>
 			
-			<div class="naprav_block">Breakdance</div>
+			<div class="naprav_block"><a href="file:///C:/Users/Федосей/Downloads/-_-/break%20Dance.html">Breakdance</a></div>
 			
-			<div class="naprav_block">Lady's Dance</div>
+			<div class="naprav_block"><a href="file:///C:/Users/Федосей/Downloads/-_-/Lady's%20Dance.html">Lady's Dance</a></div>
 			
-			<div class="naprav_block">Детская хореография</div>
+			<div class="naprav_block"><a href="file:///C:/Users/Федосей/Downloads/-_-/dh.html">Детская хореография</a></div>
 			
 			<div class="naprav_block">Contemporary</div>
 			
 			<div class="inf_o_st">Студия танса"j-loft"создана для того,чтобы собирать любителей танса от новичков до професионалов.
 			Наша цель-учить людей танцевоть.
 			<p>У нас есть всё:комфортные условия и профессиональная команда педагогов,группы для начинающих и профи ,большой выбор танцевальных направлений. </p>
-		<p>Студия танса "j-loft" работает 7 дней в неделю.Основные танцевальные направления,прекрасные педагоги,просторный зал,центр города.</p></div>				
+		<p>Студия танса "j-loft" работает 7 дней в неделю.Основные танцевальные направления,прекрасные педагоги,просторный зал,центр города.</p></div>
+</div>		
 			<div class="footer">
 			
 			<img class="fo" src="vk.jpg"/>
