--- a/j-loft.html
+++ b/j-loft.html
@@ -1,22 +1,23 @@
 <html>
+					<div class="gr">
 	<link rel="stylesheet" href="progect.css">
 		<body>
 		<div class="block5">
-			
+				
 			<div class="title1"><h3><b>Главный телефон для справок:489-480</b></h3></div>
 			<div class="ad"><h3><b>Масленикова 28,Модный дом "Роба"(5 этаж)</h3></b></div>
-		</div>
+				</div>
 		<div class="slides">
         <img src="best.jpg" class="block" alt="">
         <img src="Group 56.jpg" alt="">
         <img src="Group 58.jpg" alt="">
         <img src="Group 59.jpg" alt="">
 		
-    </div>
-	<div>
     <button class="btnRight">листать далее</button>
     <script src="script.js" class="btnRight"></script>
-	</div>
+	
+    </div>
+				</div>
 				<div class="lina"></div>
 		<div class="fest">	
 			<img class ="f" src="k.jpg"/>
