--- a/Belly dance .html
+++ b/Belly dance .html
@@ -1,13 +1,13 @@
 <html>
 		<title>Belly dance </title>
-				<link rel="stylesheet" href="bbd.css">
+				<link rel="stylesheet" href="gty.css">
 			<div class="block5">
 			<img class="j" 	src="logotip.png">
 			<div class="title1"><h3><b>Главный телефон для справок:489-480</b></h3></div>
 			<div class="ad"><h3><b>Масленикова 28,Модный дом "Роба"(5 этаж)</h3></b></div>
 		</div>
-				<div class="bely_d">
-					<img src="bely.jpg">
+				<div class="break">
+					<img src="ki.jpg">
 				<div>	
 
 <p>Одно из видимых отличий от других танцев – большое количество движений бедер и живота. Отсюда распространенный миф, что танец живота – это танец только живота. На самом деле во время танца задействованы практически все группы мышц. Вырабатывается «змеиная» гибкость тела, улучшается координация движений. Вы научитесь чувствовать ритм и удивитесь способностям своего тела так выразительно двигаться.
