--- a/Contemporary.html
+++ b/Contemporary.html
@@ -1,6 +1,6 @@
 <html>
 		<title>Contemporary</title>
-				<link rel="stylesheet" href="bd.css">
+				<link rel="stylesheet" href="gty.css">
 			<div class="block5">
 			<img class="j" 	src="logotip.png">
 			<div class="title1"><h3><b>Главный телефон для справок:489-480</b></h3></div>
