--- a/Strip dance.html
+++ b/Strip dance.html
@@ -1,12 +1,12 @@
 <html>
 		<title>Strip dance</title>
-				<link rel="stylesheet" href="sd.css">
+				<link rel="stylesheet" href="gty.css">
 			<div class="block5">
 			<img class="j" 	src="logotip.png">
 			<div class="title1"><h3><b>Главный телефон для справок:489-480</b></h3></div>
 			<div class="ad"><h3><b>Масленикова 28,Модный дом "Роба"(5 этаж)</h3></b></div>
 		</div>
-				<div class="Strip">
+				<div class="break">
 					<img src="Strip.jpg">
 					
 					
