--- a/Lady's Dance.html
+++ b/Lady's Dance.html
@@ -1,5 +1,5 @@
 <html>
-		<title>break dance</title>
+		<title>Lady's Dance</title>
 				<link rel="stylesheet" href="ld.css">
 			<div class="block5">
 			<img class="j" 	src="logotip.png">
