--- a/break Dance.html
+++ b/break Dance.html
@@ -1,5 +1,5 @@
 <html>
-		<title>Contemporary</title>
+		<title>Break Dance</title>
 				<link rel="stylesheet" href="gty.css">
 			<div class="block5">
 			<img class="j" 	src="logotip.png">
